<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Unimon</string>
    <string name="action_settings">Settings</string>
    
    <string name="newGameButton_text">New Game</string>
    <string name="newGame_alert_title">New Game</string>
    <string name="newGame_alert_message">Do you really want to start a new game? Old scores will be lost!</string>
    <string name="resumeButton_text">Resume</string>
    <string name="guideButton_text">Guide</string>
    <string name="optionsButton_text">Options</string>
    <string name="sound_text">Sound</string>
    <string name="language_text">Language</string>
    <string name="sound_off_text">Off</string>
    <string name="sound_on_text">On</string>
    <string name="english_text">English</string>
    <string name="german_text">German</string>
    <string name="image_button">Image Button</string>
    
    <string name="action_inventar">Inventory</string>
    <string name="action_unimons">Unimons</string>
    <string name="action_menu">Menu</string>
    <string name="story_part_one">Hello my name is Dr. Wulfman. I\'m the director of the University of Regensburg. A villain, who wants our downfall, dreadfully cursed the University. 
        This curse states that all students get super lazy and therefore only write bad grades.</string>
    <string name="story_part_two">Now it is your task to defeat him in order to save our future. You can choose your favourite Unimon, with which you can pull into fights against the villain and his evil assistansts.</string>
    <string name="story_part_three">Collect enough skillpoints to be able to train your unimons, in order to get stronger and stronger. You are our only hope... now go, and save the University and it\'s students!</string>
    <string name="next_button_text">Next</string>
    <string name="back_button_text">Back</string>
    <string name="money_text">Money:\u0020</string>
    <string name="xp_text">XP:\u0020</string>
    <string name="health_text">Health:\u0020</string>
    <string name="skillpoint_text">Skillpoints:\u0020</string>
    <string name="unimon_name_text">Name</string>
    <string name="current_skills_text">Current Skills</string>
    <string name="dompteur_info_text">Which Unimon do you want to train?</string>
    
    
    <string name="item_count_text">Number:\u0020</string>
    <string name="healpot_name">Healpot</string>
    <string name="healpot_info_text">Heals your Unimon by 20%</string>
    <string name="uniball_name">Uniball</string>
    <string name="uniball_info_text">Try to catch the opposing Unimon!</string>
    <string name="revive_name">Revive</string>
    <string name="revive_info_text">Revives your dead Unimon.</string>
    <string name="protector_name">Protector</string>
    <string name="protector_info_text">Protects you from one wild Unimon.</string>
    <string name="protector_toast">You don\'t have any Protectors left!</string>
    <string name="protector_used_toast">You were protected from a wild Unimon!</string>
    <string name="use_item_button_text">Use Healpot/Revive</string>
    <string name="use_protector_button_text">Use Protector</string>
    <string name="use_protector_toast">Now you\'re safe from one wild unimon</string>
    <string name="shop_name">Shop</string>
    <string name="shop_back_button">Leave Shop</string>
    <string name="dompteur_name">Dompteur</string>
    <string name="hospital_fragment">Do you want to enter the hospital?</string>
    <string name="hospital_name">Hospital</string>
    <string name="leave_hospital_button_text">Leave hospital</string>
    <string name="hospital_heal_info">Your Unimons are all alive.</string>
    <string name="price">price</string>
    
    <string name="image_text">Bild von Item</string>
    
    <string name="name_text">Name:\u0020</string>
    <string name="level_text">Level:\u0020</string>
    <string name="unimon_image_text">Unimon image</string>
    <string name="story_description_text">The endboss has placed a curse on the University of Regensburg, which states that all students only write bad grades. The aim of the game is to defeat the villain and thus lift the curse. To defeat him, you must collect enough skillpoints and thus train your Unimons. Dean Wulffman asked you now to defeat the villain, so the University of Regensburg again cut by local standards at best. 
        Since you previously skipped all lectures and seminars, you might not be subject to the curse. In order to defeat the bad guy, you are on the dean your first unimon, while you may choose between three different Unimons.</string>
    <string name="story_description_title">Story</string>
    <string name="tips_tricks_title">Tips and Tricks</string>
    <string name="tips_tricks_one_text">Avoid entering buildings, otherwise you may experience problems with the gps signal. \nThe unimon game is based on gps.</string>
    <string name="tips_tricks_two_text">Shop: Buy items. \nDompteur: Improve or learn new Spells. \nHospital: Heal Unimons.</string>
    <string name="tips_tricks_three_text">Money: Buy items. \nXP: Level up. \nSkillpoints: Train Unimons.</string>
    <string name="wulfman_img">Dr. Wulfman</string> 

    <string name="dompteur_new_skill">New skill</string>
    <string name="dompteur_improve_skill">Improve skill</string>
    <string name="hospital_healAll">Heal all Unimons</string>


    <string name="battle_lost">Battle lost. Your unimon is dead.</string>
    <string name="battle_won">Battle won! Yay!</string>
    <string name="back_to_menu_button">Back to menu</string>
	<string name="winner_text_one"> Congrats! It has been a long and difficult way, but in the end, you have beaten the evil warlock and the curse was removed!</string>
	<string name="winner_text_two"> Your journey ends here, but feel free to continue in freeplay-mode! Catch all unimons and train them as high as you can! </string>
    <string name="battle_escape_button_text">Try to escape</string>
    <string name="escape_toast_text">Your escape was successful!</string>
    <string name="escape_not_successfull_toast_text">Your escape was not successful!</string>
    <string name="battle_attack_button_text">Attack</string>
    <string name="battle_change_unimon_button_text">Change Unimon</string>
    <string name="catch_unimon_success_text">You catched the Unimon! Yay!</string>
    <string name="catch_unimon_fail_text">Unimon catch failed!</string>
    <string name="battle_use_item_button_text">Use Item</string>
    <string name="no_items_available">Not available! Go to the shop!</string>
    <string name="battle_healpot_button_text">Use healpot</string>
    <string name="battle_uniball_button_text">Use uniball</string>
    <string name="only_one_unimon_available_text">You have only one Unimon!</string>
    <string name="battle_select_text">Select:\u0020</string>
    <string name="battle_enemyunimon_lost_health_text">Enemy Unimon lost health.</string>
    <string name="battle_unimon1_button_text">Select Unimon 1</string>
    <string name="battle_unimon2_button_text">Select Unimon 2</string>
    <string name="battle_unimon3_button_text">Select Unimon 3</string>
    <string name="battle_healpot_used">You used a healpot</string>
    <string name="battle_spell_button_text">Spell 1</string>
    <string name="choose_primary_unimon">Choose your primary Unimon for battle!</string>
    <string name="choose_second_unimon">Choose a replacement unimon!</string>
    <string name="choose_third_unimon">Choose another replacement unimon!</string> 
    
    <string name="alert_random_unimon_battle_title">Wild Unimon battle</string>
    <string name="alert_random_unimon_battle_message">You have to fight against a wild unimon!</string>
    <string name="start_random_unimon_battle">Start Battle</string>
    
    <string name="cancel">Cancel</string>
    <string name="alert_money_warning_title">Attention!</string>
    <string name="alert_money_warning_message">To purchase this item you need more money!</string>
    <string name="ok">OK</string>
	<string name="left_parenthesis"> ( </string>
	<string name="right_parenthesis"> ) </string>
	
	<string name="swipe_unimons_info_text">Swipe to change your Unimon</string>
	<string name="choose_that_unimon">Choose me!</string>
	
	
	<string name="inventory_use_item">Use Item</string>
	<string name="inventory_use_healPot">Use Healpot</string>
	<string name="inventory_use_revive">Revive</string>
	<string name="spells_headline">Spells:\u0020</string>
	<string name="spell_name">spellname</string>
	<string name="spell_level">spelllevel</string>	
	<string name="next_level_spell_damage">next spell damage</string>	
	<string name="current_spell_damage">current spell damage</string>	
	
	<string name="battle_won_money_earend_text">Money earned:\u0020</string>
	<string name="battle_won_XP_text">XP earned:\u0020</string>
	<string name="back_to_map_button_text">Back to map</string>

	<string name="enemy_fight_text_first_part">It\'s</string>
	<string name="enemy_fight_text_second_part">\'s turn!</string>
	
	
	<string name="playerOutOfRange_info">You just do not find yourself on campus!</string>

</resources>
