<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    

    <TextView
        android:id="@+id/money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/money_text"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/skillpoints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/money"            
        android:text="@string/skillpoint_text"
        android:textSize="20sp" />
    
    <TextView
        android:id="@+id/unimon_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/skillpoints"
        android:text="@string/unimon_name_text" 
        android:textSize="20sp" />
    
    <TextView
        android:id="@+id/current_skills"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/unimon_name"     
        android:text="@string/current_skills_text"
        android:textSize="20sp" />
    
    
    <Button
        android:id="@+id/dompteur_improve_skill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/current_skills"
        android:text="@string/dompteur_improve_skill"
        android:textSize="20sp" />
    
 

    <Button
        android:id="@+id/dompteur_new_skill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/current_skills"
        android:layout_toRightOf="@+id/dompteur_improve_skill"
        android:text="@string/dompteur_new_skill"
        android:textSize="20sp" />
    
</RelativeLayout>
