<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"   >
    
    <TextView 
        android:id="@+id/spell_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:text="@string/spell_name"
        android:textSize="20sp"
        android:textColor="#ffd12e" />
    
    <TextView 
        android:id="@+id/level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="2dp"
        android:layout_below="@id/spell_name"
        android:text="@string/spell_level"
        android:textSize="15sp"
        android:textColor="#ffd12e" />
    
    <TextView 
        android:id="@+id/current_spell_damage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_below="@id/level"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="2dp"
        android:text="@string/current_spell_damage"
        android:textSize="15sp"
        android:textColor="#ffd12e" />
    
    <TextView 
        android:id="@+id/next_level_spell_damage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_below="@id/current_spell_damage"
        android:layout_marginLeft="20dp"       
        android:text="@string/next_level_spell_damage"
        android:textSize="15sp"
        android:textColor="#ffd12e" />
    

</RelativeLayout>
