<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2A56B2"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/unimon_logo_img"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/wulfman_img"
        android:src="@drawable/unimon_logo" />

    <Button
        android:id="@+id/newGame_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/resume_button"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/startbutton_shape"
        android:text="@string/newGameButton_text"
        android:textColor="#ffd12e"
        android:textSize="25sp" />

    <Button
        android:id="@+id/resume_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/options_button"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/startbutton_shape"
        android:text="@string/resumeButton_text"
        android:textColor="#ffd12e"
        android:textSize="25sp" />

    <Button
        android:id="@+id/options_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/guide_button"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/startbutton_shape"
        android:text="@string/optionsButton_text"
        android:textColor="#ffd12e"
        android:textSize="25sp" />

    <Button
        android:id="@+id/guide_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/startbutton_shape"
        android:text="@string/guideButton_text"
        android:textColor="#ffd12e"
        android:textSize="25sp" />

</RelativeLayout>