<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2A56B2"
    android:orientation="vertical">
    
<ScrollView
    android:id="@+id/scrollview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_above="@+id/back_button"
    android:background="#2A56B2" >
     
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/story_description_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp"
        android:layout_marginLeft="10sp"
        android:layout_marginTop="20sp"
        android:text="@string/story_description_title"
        android:textColor="#ffd12e"
        android:textSize="20sp" />

    <WebView
        android:id="@+id/story_description"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignLeft="@+id/tips_tricks"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/story_description_title"
        android:layout_marginBottom="10sp"
        android:layout_marginRight="10sp"
        android:orientation="vertical"
        android:text="@string/story_description_text"
        android:textColor="#ffd12e" />

    <TextView
        android:id="@+id/tips_tricks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/story_description"
        android:layout_marginBottom="10sp"
        android:layout_marginLeft="10sp"
        android:text="@string/tips_tricks_title"
        android:textColor="#ffd12e"
        android:textSize="20sp" />

    <WebView
        android:id="@+id/tips_tricks_one"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignLeft="@+id/tips_tricks"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tips_tricks"
        android:layout_marginBottom="10sp"
        android:layout_marginRight="10sp"
        android:orientation="vertical"
        android:text="@string/tips_tricks_one_text"
        android:textColor="#ffd12e" />

    <WebView
        android:id="@+id/tips_tricks_two"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignLeft="@+id/tips_tricks_one"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tips_tricks_one"
        android:layout_marginBottom="10sp"
        android:layout_marginRight="10sp"
        android:orientation="vertical"
        android:text="@string/tips_tricks_two_text"
        android:textColor="#ffd12e" />

    <WebView
        android:id="@+id/tips_tricks_three"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignLeft="@+id/tips_tricks_one"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tips_tricks_two"
        android:layout_marginBottom="10sp"
        android:layout_marginRight="10sp"
        android:orientation="vertical"
        android:text="@string/tips_tricks_three_text"
        android:textColor="#ffd12e" />
    </RelativeLayout>
</ScrollView>

<Button
    android:id="@+id/back_button"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10sp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginTop="20sp"
    android:layout_alignParentBottom="true"
    android:background="@drawable/startbutton_shape"
    android:text="@string/back_button_text"
    android:textColor="#ffd12e"
    android:textSize="25sp" />

    </RelativeLayout>
    