<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/wulfman_img"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:src="@drawable/christian_wolff"
        android:contentDescription="@string/wulfman_img" />
      

    <Button
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/next_button_text" />
    

    <TextView
        android:id="@+id/story_part_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/wulfman_img"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/story_part_one"
        android:textSize="12sp" />

</RelativeLayout>
