<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2A56B2" >

    <ImageView
        android:id="@+id/game_finish_logo"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/unimon_image_text"
        android:src="@drawable/win_logo"
        android:text="@string/unimon_image_text" />

    <WebView
        android:id="@+id/game_finish_text_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/game_finish_logo"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="25sp"
        android:text="@string/winner_text_one"
        android:textColor="#ffd12e"
        android:background="#2A56B2"  />

    <WebView
        android:id="@+id/game_finish_text_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/game_finish_text_one"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/winner_text_two"
        android:textColor="#ffd12e"
        android:background="#2A56B2"  />

    <Button
        android:id="@+id/back_to_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:text="@string/back_to_menu_button"
        android:textColor="#ffd12e"
        android:background="@drawable/startbutton_shape" />

</RelativeLayout>